Split JAX-RS interface to Agrest in a separate module #537
.. preliminary refactoring - replacing JAXRS MultivaluedMap with a regular map in tests